--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -20,12 +20,12 @@
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/27/n12715701.md#1" target="_blank">半夜抽筋2步骤缓解 吃这些食物能预防</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12717005.md#1" target="_blank">实测6款暖身热饮排名：姜茶第三、冠军是它</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/30/n12722965.md#1" target="_blank">家里多于3人 病毒传播风险超50% 3招防家庭传染</a><br></h3>
-<h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/1/n12726294.md#1" target="_blank">中医师用2种水果干煮水喝 养胃、改善脂肪肝</a><br></h3>
-<h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/1/n12726617.md#1" target="_blank">这时喝水排毒快！早晚喝对水养生 还能控血糖</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12726885.md#1" target="_blank">立春要晚睡早起 吃2类食材升阳气又散寒</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12727150.md#1" target="_blank">立百病毒致死率高 专家示警下一场大流行威胁</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12727440.md#1" target="_blank">【重播】新冠1个症状藏大隐患 一定要警惕</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12729103.md#1" target="_blank">检测海鲜、冰棒病毒有用吗？新冠检测3大疑问</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12729347.md#1" target="_blank">【重播】疫苗对变种病毒有效吗？抗新冠忽视1个问题</a><br></h3>
+<h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731439.md#1" target="_blank">天冷4种粥暖胃又补肾 一碗粥大补气血</a><br></h3>
+<h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731460.md#1" target="_blank">【慧聊养生】悟空拔毛变猴成真 中医全息应用千年</a><br></h3>
 <tr><td><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002.md#1<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yrsmsb310/djy/blob/master/gb/nsc1002.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc1002.htm">https://www.epochtimes.com/gb/nsc1002.htm</a>    （国内需<a href="https://github.com/yrsmsb310/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
