--- a/gb/20/1/16/n11798930.md
+++ b/gb/20/1/16/n11798930.md
@@ -1,56 +1,60 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/zsifxm298/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zsifxm298/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zsifxm298/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>预测：德国老龄化加剧 未来十年劳动力减380万</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2020/01/iStock-924088222-e1538648116141-600x400.jpg" />
-<h6>德国社会老龄化明显加剧，到2030年，退休老人将增加300万人。（iStock.com/Marina113）
-</h6>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cwpsfz3041/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cwpsfz3041/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cwpsfz3041/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cwpsfz3041/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cwpsfz3041/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cwpsfz3041/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cwpsfz3041/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cwpsfz3041/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cwpsfz3041/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cwpsfz3041/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cwpsfz3041/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cwpsfz3041/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cwpsfz3041/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cwpsfz3041/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cwpsfz3041/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cwpsfz3041/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>德国老龄化加剧 未来十年劳动力或减380万</h2>
+
+<h6></h6>
 <hr>
-<p>【大纪元2020年01月17日讯】（大纪元记者祝兰德国报导）据德媒《明镜》年初报导，一项预测结果显示，在未来十年内，德国<a href="https://github.com/zsifxm298/djy/blob/master/gb/tag/%E7%A4%BE%E4%BC%9A%E8%80%81%E9%BE%84%E5%8C%96.md">社会老龄化</a>明显加剧，到2030年，退休老人将增加300万人，而劳动力减少380万。</p>
+	<p>【大纪元2020年01月17日讯】（大纪元记者祝兰德国报导）据德媒《明镜》年初报导，一项预测结果显示，在未来十年内，德国<ahref="https://github.com/cwpsfz3041/djy/blob/master/gb/tag/%E7%A4%BE%E4%BC%9A%E8%80%81%E9%BE%84%E5%8C%96.md#1">社会老龄化</a>明显加剧，到2030年，退休老人将增加300万人，而劳动力减少380万。</p>
 <p>报导中引用咨询公司Prognos的关于人口结构的预测报告。该公司从1964年开始定期发布“德国报告”小册子，内容是德国社会的发展走势。</p>
 <p>据报告结构，出生于1955年—1967年的德国人，在未来10年里逐渐退休。由于那个年代出生率很高，每年大约130万人，也被称为Babyboomer，意思是婴儿出生爆炸期。而从70年代中期开始，德国出生率明显减少。</p>
 <p>这样就造成一个局面，即未来十年里，20岁至64岁之间的人口缩水380万，该年龄段是理论上具有劳动能力的人群，他们可以创造财富，交税和交社保。</p>
 <p>与此同时，退休老人则比现在增加3百万，换言之，四分之一人口年龄超过67岁，需要被照料的老人增加60万。</p>
-<p>退休老人越来越多，劳动力越来越少，这意味着，劳动者得交更多保险，才能养活那么多的老人。据预测计算，2020年至2030年，<a href="https://github.com/zsifxm298/djy/blob/master/gb/tag/%E5%85%BB%E8%80%81%E4%BF%9D%E9%99%A9.md">养老保险</a>、护理保险、失业保险和医疗保险的支出，要从6790亿欧元，增加到9960亿欧元，相当于增长了几乎50%。相当于每年要增加300亿欧元。</p>
+<p>退休老人越来越多，劳动力越来越少，这意味着，劳动者得交更多保险，才能养活那么多的老人。据预测计算，2020年至2030年，<ahref="https://github.com/cwpsfz3041/djy/blob/master/gb/tag/%E5%85%BB%E8%80%81%E4%BF%9D%E9%99%A9.md#1">养老保险</a>、护理保险、失业保险和医疗保险的支出，要从6790亿欧元，增加到9960亿欧元，相当于增长了几乎50%，相当于每年要增加300亿欧元。</p>
 <p>在劳动力减少的情况下，要保证这么多支出，社保费率就不能维持在（毛收入的）40%以下，而是会上涨到45%以上。</p>
 <p>换言之，公民个人社保支出要增加，雇主为雇员交的社保也要增加，即企业成本增加。</p>
 <p>随着人均寿命继续增加，到时百年老人也会越来越多，到2030年，预计会有3万名百岁以上的老人，目前大约1.6万。</p>
-<p>因此，如何解决<a href="https://github.com/zsifxm298/djy/blob/master/gb/tag/%E7%A4%BE%E4%BC%9A%E8%80%81%E9%BE%84%E5%8C%96.md">社会老龄化</a>问题，也是社会焦点之一。报导中提到，来自波鸿大学的经济学家威尔丁（Martin Werding）表示，单单增加出生率和移民，是无法解决问题的。养老金储备用到2025年是没问题，但之后如何还不清楚。</p>
+<p>因此，如何解决<ahref="https://github.com/cwpsfz3041/djy/blob/master/gb/tag/%E7%A4%BE%E4%BC%9A%E8%80%81%E9%BE%84%E5%8C%96.md#1">社会老龄化</a>问题，也是社会焦点之一。报导中提到，来自波鸿大学的经济学家威尔丁（Martin Werding）表示，单单增加出生率和移民，是无法解决问题的。养老金储备用到2025年是没问题，但之后如何还不清楚。#</p>
 <p>责任编辑：王亦笑</p>
-
+	
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/20/1/16/n11798930.htm">预测：德国老龄化加剧 未来十年劳动力减380万</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11793198.htm">德国绿穹珍宝馆盗窃案：有人兜售失窃珍宝</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/10/n11782268.htm">最新统计：2019年德国就业人口上涨</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/21/n11671157.htm">打算在德国养老？先弄明白这些事</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/2/1/n4356497.htm">劳力少退休者多 德国政府纠结退休年龄</a></li>
-> <li><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/11/20/n11668736.md">德国执政两党达成一致 推出基本养老金</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11796241.htm">伊朗在变天 中共或失去打击美国的王牌</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11795863.htm">【新闻看点】川刘大阵势签协议 北京被逼上架</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11796086.htm">中共国企欠民企9千亿 李克强年前急回应</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11796563.htm">央视前主持人赵忠祥患癌在北京去世</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/4/24/n7677815.htm">家有贤妻  福荫陶门几代人！</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11777539.htm">“蓝出于青”的幽默才子纪晓岚</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740761.htm">“轮回之说”何处来？古老中国的轮回观</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/9/n11778583.htm">【命理】算命能指导一个人发财吗？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11793300.htm">【新闻看点】中美初阶段贸协曝光 北京大让步</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11793546.htm">港男纪律部队坠楼过程被录 评论：老天有眼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11791100.htm">北京昌平六百特警凌晨偷袭强拆 业主遭群殴</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11793300.htm">【新闻看点】中美初阶段贸协曝光 北京大让步</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11793352.htm">【热点互动】2020中国经济灰犀牛与黑天鹅</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/18/n11664716.htm">【思想领袖】艾贝尔：气候说词受政治操控</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/13/n11791054.htm">大陆名嘴朱丹：口误让我的主持生涯彻底毁灭</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11794403.htm">澎恰恰重摔致髋骨错位 坐轮椅录影吓坏众人</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788549.htm">田蕊妮不再续约无线 杜汶泽笑言：替TVB难过</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11791826.htm">网民：看了这段短片就知道伊朗“不可怕”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/15/n11796365.htm">大陆演艺圈大洗牌？杨紫2019年最走红</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/15/2/1/n4356497.md#1">劳力少退休者多 德国政府纠结退休年龄</a></li>
+<li><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/19/11/21/n11671157.md#1">打算在德国养老？先弄明白这些事</a></li>
+<li><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/20/1/10/n11782268.md#1">最新统计：2019年德国就业人口上涨</a></li>
+<li><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/20/1/14/n11793198.md#1">德国绿穹珍宝馆盗窃案：有人兜售失窃珍宝</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798930.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zsifxm298/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zsifxm298/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/8/n11031942.md#1" target="_blank">传奇总统里根（8）：向中国播撒自由精神</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/5/n10279698.md#1" target="_blank">百岁老人：法轮功延长了我的寿命</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/ixpzix312/djy/blob/master/gb/21/1/26/n12711986.md#1">预言试析：共产党亡于何时？</a></li>
+<li><a href="https://github.com/ixpzix312/djy/blob/master/gb/21/1/30/n12723183.md#1">【解密时分】懂得鸟语 历史上真有这样的人</a></li>
+<li><a href="https://github.com/ixpzix312/djy/blob/master/gb/20/12/29/n12651261.md#1">轮回转生 冤家变成母子</a></li>
+<li><a href="https://github.com/ixpzix312/djy/blob/master/gb/21/1/18/n12695507.md#1">【命理】被冤枉陷害的好人 皇天能不管吗？</a></li>
+<li><a href="https://github.com/ixpzix312/djy/blob/master/gb/21/2/2/n12728948.md#1">【解密时分】斯里兰卡前总统转世农家男孩</a></li>
+<li><a href="https://github.com/ixpzix312/djy/blob/master/gb/20/11/4/n12523669.md#1">【思想领袖】哥尔达斯基：民粹主义如何兴起？</a></li>
+<li><a href="https://github.com/ixpzix312/djy/blob/master/gb/21/2/2/n12728948.md#1">【解密时分】斯里兰卡前总统转世农家男孩</a></li>
+<li><a href="https://github.com/ixpzix312/djy/blob/master/gb/21/2/3/n12730640.md#1">【微视频】缅甸军方疑选举作弊 逮捕昂山素季</a></li>
+<li><a href="https://github.com/ixpzix312/djy/blob/master/gb/21/2/1/n12726476.md#1">若中共对台湾行动美国将如何做 国务卿回应</a></li>
+<li><a href="https://github.com/ixpzix312/djy/blob/master/gb/21/2/1/n12726350.md#1">【一线采访】北京大兴疫情严重 中共隐瞒</a></li>
+<li><a href="https://github.com/ixpzix312/djy/blob/master/gb/21/2/1/n12724649.md#1">军事政变？昂山素季等缅甸领导人遭拘留</a></li>
+<li><a href="https://github.com/ixpzix312/djy/blob/master/gb/21/1/31/n12724209.md#1">李英爱迎来50岁生日 保养六法维持冻龄美貌</a></li>
+<li><a href="https://github.com/ixpzix312/djy/blob/master/gb/21/1/31/n12724329.md#1">疫情期间团购被骗 台亲共艺人踢爆大陆假食品</a></li>
+<li><a href="https://github.com/ixpzix312/djy/blob/master/gb/21/2/3/n12729203.md#1">黎姿携三个女儿行山 粉丝意外聚焦一双波鞋</a></li>
+<li><a href="https://github.com/ixpzix312/djy/blob/master/gb/21/2/1/n12726330.md#1">51岁周传雄登陆综 22岁孟美岐当导师引狂批</a></li>
+<li><a href="https://github.com/ixpzix312/djy/blob/master/gb/21/2/2/n12727150.md#1">立百病毒致死率高 专家示警下一场大流行威胁</a></li>
+<li><a href="https://github.com/ixpzix312/djy/blob/master/gb/21/2/1/n12726617.md#1">这时喝水排毒快！早晚喝对水养生 还能控血糖</a></li>
+<li><a href="https://github.com/ixpzix312/djy/blob/master/gb/21/2/2/n12727769.md#1">英军战机空袭伊拉克洞穴 准确歼灭IS成员</a></li>
+<li><a href="https://github.com/ixpzix312/djy/blob/master/gb/21/2/1/n12724829.md#1">乌克兰网红每天穿19世纪服装 如古典美人</a></li>
+<li><a href="https://github.com/ixpzix312/djy/blob/master/gb/21/2/2/n12727507.md#1">2021年2月是个完美矩形 会有大事发生吗？</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cwpsfz3041/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cwpsfz3041/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/16/n11798930.htm">德国老龄化加剧 未来十年劳动力或减380万</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cwpsfz3041/djy/blob/master/gb/20/1/16/n11798930.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwpsfz3041/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cwpsfz3041/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cwpsfz3041/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwpsfz3041/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwpsfz3041/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwpsfz3041/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwpsfz3041/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwpsfz3041/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwpsfz3041/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwpsfz3041/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwpsfz3041/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwpsfz3041/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwpsfz3041/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwpsfz3041/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwpsfz3041/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwpsfz3041/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwpsfz3041/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwpsfz3041/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwpsfz3041/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwpsfz3041/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwpsfz3041/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwpsfz3041/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwpsfz3041/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cwpsfz3041/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwpsfz3041/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cwpsfz3041/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cwpsfz3041/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
